eglibc (2.13-12) UNRELEASED; urgency=low

  [ Aurelien Jarno ]
  * rules.d/debhelper.mk: Fix a typo about kfreebsd-amd64.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 26 Jul 2011 16:04:27 +0200

eglibc (2.13-11) unstable; urgency=low

  [ Aurelien Jarno ]
  * control.in/main: fix nscd description.  Closes: #633370.
  * Update patches/svn-updates to revision 14511 to fix build on 
    powerpcspe. Add corresponding symbols file and expected testsuite 
    results.  Closes: #632863.
  * Add patches/localedata/locale-os_RU.diff from upstream to add Ossetian
    locale.  Closes: #634508.
  * kfreebsd/local-sysdeps.diff, update to revision 3618 (from glibc-bsd).
    - fixes LD_PRELOAD with a kfreebsd-9 kernel. Closes: #630695.
    - fixes tst-atime when build in a noatime filesystem.  Closes: #634152.
    - uses upstream RFTSIGZMB for exit signal selection when available.
  * Disable multiarch support on amd64, kfreebsd-amd64, ppc64, sparc64 until
    we fix the /lib64 -> /lib symlink issue. Closes: #632176.
  * Re-enable patches/any/cvs-resolv-different-nameserver.diff. Add 
    patches/any/submitted-resolv-assert.diff to fix assertion triggered by the
    previous patch.  Closes: #535504, #602291.
  * Add support for s390x.
  * Fix debhelper.in/libc.NEWS with the right option to pass to gcc. Closes: 
    #629819.
  * Add any/submitted-resolv-init.diff to fix issue with the resolver when 
    RES_ROTATE is enabled.  Closes: #593571.

  [ Jeremie Koenig ]
  * Add debian/libc0.3.symbols.hurd-i386.

  [ Steve Langasek ]
  * Try again to make libc6-dev multiarch-same.

 -- Aurelien Jarno <aurel32@debian.org>  Tue, 26 Jul 2011 03:00:33 +0200

eglibc (2.13-10) unstable; urgency=low

  * control.in/main: tag libc-bin Essential: yes.
  * Revert patch to make libc6-dev multiarch.  Closes: #632667.
  * Add patches/alpha/submitted-statfs64.patch to fix statvfs() on alpha.
    Closes: #324051.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 04 Jul 2011 22:02:35 +0200
