@@ -1,0 +1,24 @@
+#!/bin/sh
+
+set -e
+
+case $1 in
+	(upgrade|install)
+	# We want /usr/include/bits and /usr/include/gnu to become
+	# symlinks
+	if test -d /usr/include/bits ; then
+		rm -rf /usr/include/bits
+	fi
+	if test -d /usr/include/gnu ; then
+		rm -rf /usr/include/gnu
+	fi
+
+	# We want /usr/include/sys to be a normal directory instead
+	# of a symlink
+	if test -h /usr/include/sys ; then
+		rm -f /usr/include/sys
+	fi
+	;;
+	(*)
+	;;
+esac
