@@ -26,18 +26,30 @@ i386_CC = $(CC) -m32
 i386_CXX = $(CC) -m32
 i386_extra_cflags = -march=pentium4 -mtune=generic
 i386_extra_config_options = $(extra_config_options) --disable-profile
-i386_includedir = /usr/include/i486-linux-gnu
+i386_includedir = /usr/include/i386-linux-gnu
 i386_slibdir = /lib32
 i386_libdir = /usr/lib32
 
 define libc6-dev-i386_extra_pkg_install
+
+mkdir -p debian/libc6-dev-i386/usr/include/i386-linux-gnu
+ln -s x86_64-linux-gnu/bits debian/libc6-dev-i386/usr/include/
+ln -s x86_64-linux-gnu/gnu debian/libc6-dev-i386/usr/include/
+
 mkdir -p debian/libc6-dev-i386/usr/include/x86_64-linux-gnu/gnu
-cp -af debian/tmp-i386/usr/include/i486-linux-gnu/gnu/stubs-32.h \
-	debian/libc6-dev-i386/usr/include/x86_64-linux-gnu/gnu/
-ln -s x86_64-linux-gnu/gnu debian/libc6-dev-i386/usr/include/gnu
-ln -s x86_64-linux-gnu/sys debian/libc6-dev-i386/usr/include/sys
-ln -s x86_64-linux-gnu/bits debian/libc6-dev-i386/usr/include/bits
-mkdir -p debian/libc6-dev-i386/usr/include/i486-linux-gnu
+cp -a debian/tmp-i386/usr/include/i386-linux-gnu/gnu/stubs-32.h \
+        debian/libc6-dev-i386/usr/include/x86_64-linux-gnu/gnu
+
+mkdir -p debian/libc6-dev-i386/usr/include/sys
+for i in `ls debian/tmp-libc/usr/include/x86_64-linux-gnu/sys` ; do \
+	ln -s ../x86_64-linux-gnu/sys/$$i debian/libc6-dev-i386/usr/include/sys/$$i ; \
+done
+
+cp -a debian/tmp-i386/usr/include/i386-linux-gnu/sys/elf.h \
+	debian/libc6-dev-i386/usr/include/sys
+cp -a debian/tmp-i386/usr/include/i386-linux-gnu/sys/vm86.h \
+	debian/libc6-dev-i386/usr/include/sys
+
 endef
 
 define libc6-i386_extra_pkg_install
