@@ -61,12 +61,19 @@ cp -af debian/tmp-xen/$(libdir)/*.a \
 endef
 
 define libc6-dev-amd64_extra_pkg_install
-mkdir -p debian/libc6-dev-amd64/usr/include/i386-linux-gnu/gnu
-cp -af debian/tmp-amd64/usr/include/gnu/stubs-64.h \
-        debian/libc6-dev-amd64/usr/include/i386-linux-gnu/gnu
-ln -s i386-linux-gnu/gnu debian/libc6-dev-amd64/usr/include/gnu
-ln -s i386-linux-gnu/sys debian/libc6-dev-amd64/usr/include/sys
-ln -s i386-linux-gnu/bits debian/libc6-dev-amd64/usr/include/bits
+
 mkdir -p debian/libc6-dev-amd64/usr/include/x86_64-linux-gnu
+ln -s i386-linux-gnu/bits debian/libc6-dev-amd64/usr/include/
+ln -s i386-linux-gnu/gnu debian/libc6-dev-amd64/usr/include/
+
+mkdir -p debian/libc6-dev-amd64/usr/include/i386-linux-gnu/gnu
+cp -a debian/tmp-amd64/usr/include/x86_64-linux-gnu/gnu/stubs-64.h \
+        debian/libc6-dev-amd64/usr/include/i386-linux-gnu/gnu
+
+mkdir -p debian/libc6-dev-amd64/usr/include/sys
+for i in `ls debian/tmp-libc/usr/include/i386-linux-gnu/sys` ; do \
+        ln -s ../i386-linux-gnu/sys/$$i debian/libc6-dev-amd64/usr/include/sys/$$i ; \
+done
+
 endef
 
