@@ -18,18 +18,28 @@ i386_CXX = $(CXX) -m32
 i386_add-ons = ports linuxthreads $(add-ons)
 i386_extra_cflags = -march=pentium4 -mtune=generic
 i386_extra_config_options = $(extra_config_options) --disable-profile
-i386_includedir = /usr/include/i486-kfreebsd-gnu
+i386_includedir = /usr/include/i386-kfreebsd-gnu
 i386_slibdir = /lib32
 i386_libdir = /usr/lib32
 
 define libc0.1-dev-i386_extra_pkg_install
-mkdir -p debian/libc0.1-dev-i386/usr/include/gnu
-cp -af debian/tmp-i386/usr/include/i486-kfreebsd-gnu/gnu/stubs-32.h \
-	debian/libc0.1-dev-i386/usr/include/gnu
-mkdir -p debian/libc0.1-dev-i386/usr/include/sys
-cp -af debian/tmp-i386/usr/include/i486-kfreebsd-gnu/sys/vm86.h \
-	debian/libc0.1-dev-i386/usr/include/sys
-mkdir -p debian/libc0.1-dev-i386/usr/include/i486-kfreebsd-gnu
+
+mkdir -p debian/libc6-dev-i386/usr/include/i386-kfreebsd-gnu
+ln -s x86_64-kfreebsd-gnu/bits debian/libc6-dev-i386/usr/include/
+ln -s x86_64-kfreebsd-gnu/gnu debian/libc6-dev-i386/usr/include/
+
+mkdir -p debian/libc6-dev-i386/usr/include/x86_64-kfreebsd-gnu/gnu
+cp -a debian/tmp-i386/usr/include/i386-kfreebsd-gnu/gnu/stubs-32.h \
+        debian/libc6-dev-i386/usr/include/x86_64-kfreebsd-gnu/gnu
+
+mkdir -p debian/libc6-dev-i386/usr/include/sys
+for i in `ls debian/tmp-libc/usr/include/x86_64-kfreebsd-gnu/sys` ; do \
+        ln -s ../x86_64-kfreebsd-gnu/sys/$$i debian/libc6-dev-i386/usr/include/sys/$$i ; \
+done
+
+cp -a debian/tmp-i386/usr/include/i386-kfreebsd-gnu/sys/vm86.h \
+        debian/libc6-dev-i386/usr/include/sys
+
 endef
 
 define libc0.1-i386_extra_pkg_install
