@@ -2,8 +2,14 @@ eglibc (2.13-12) UNRELEASED; urgency=low
 
   [ Aurelien Jarno ]
   * rules.d/debhelper.mk: Fix a typo about kfreebsd-amd64.
+  * Change include directory on i386 from i486-linux-gnu to i386-linux-gnu
+    and on kfreebsd-i386 from i486-kfreebsd-gnu to i386-kfreebsd-gnu.
+  * Fix installation of biarch headers (Closes: #635685):
+    - Use a symlink for bits/ and gnu/ directories
+    - Use symlinked files for sys/ directory
+    - Add a preinst script to do the directory <-> symlink conversion.
 
- -- Aurelien Jarno <aurel32@debian.org>  Tue, 26 Jul 2011 16:04:27 +0200
+ -- Aurelien Jarno <aurel32@debian.org>  Sat, 30 Jul 2011 13:30:02 +0200
 
 eglibc (2.13-11) unstable; urgency=low
 
